--- a/downloads.html
+++ b/downloads.html
@@ -1,70 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>HomeSoft Downloads</title>
+<title>Downloads</title>
 <style>
-body {font-family: Arial,sans-serif;margin:0;padding:0;background:#f0f8ff;scroll-behavior:smooth;}
-nav {background:#0077cc;padding:15px 20px;display:flex;justify-content:flex-end;position:fixed;width:100%;top:0;box-shadow:0 2px 5px rgba(0,0,0,0.2);z-index:100;}
-nav a {color:white;text-decoration:none;margin-left:20px;font-weight:bold;}
-nav a:hover{text-decoration:underline;}
-section {padding:120px 20px 50px;max-width:900px;margin:auto;}
-h2 {color:#0077cc;text-align:center;}
-#packages {display:flex;flex-wrap:wrap;justify-content:center;margin-top:30px;}
-.package-btn {display:flex;align-items:center;margin:10px;padding:10px 20px;cursor:pointer;border:1px solid #0077cc;border-radius:5px;background:white;transition:0.2s;}
-.package-btn:hover {background:#e0f0ff;transform:translateY(-2px);}
-.package-btn img {width:50px;height:50px;margin-right:10px;}
-.warning {color:red;text-align:center;margin-top:30px;font-size:1.2em;}
-footer {text-align:center;padding:20px 0;background:#0077cc;color:white;margin-top:50px;}
+body { font-family: Arial; background: #eef; margin: 20px; }
+.container { max-width: 700px; margin: auto; }
+.package { display: flex; align-items: center; margin: 10px 0; }
+.package img { width: 50px; height: 50px; margin-right: 10px; }
+.package button { margin-left: auto; padding: 5px 10px; }
 </style>
 </head>
 <body>
 
-<nav>
-  <a href="index.html">Home</a>
-</nav>
-
-<section>
-<h2>Download Software</h2>
-<div id="packages"></div>
-<div id="warning" class="warning" style="display:none;">
-Cannot find source download_software/ — Please try again later.
-</div>
-</section>
-
-<footer>&copy; 2025 HomeSoft</footer>
+<h1>Download Software</h1>
+<div class="container" id="packages"></div>
 
 <script>
-// Packages list (replace with your real folders)
-const packagesData = [
-  {name:"ExamplePackage", icon:"download_software/ExamplePackage/icon.img", file:"download_software/ExamplePackage/name.gg"}
-];
-
-const packagesContainer = document.getElementById('packages');
-const warningDiv = document.getElementById('warning');
-
-// Check if first package exists
-if(packagesData.length>0){
-  fetch(packagesData[0].icon).then(res=>{
-    if(res.ok){
-      // Folder exists, render packages
-      packagesData.forEach(pkg=>{
-        const btn = document.createElement('div');
-        btn.className='package-btn';
-        btn.onclick=()=>window.location.href=pkg.file;
-        const img=document.createElement('img'); img.src=pkg.icon;
-        const span=document.createElement('span'); span.textContent=pkg.name;
-        btn.appendChild(img); btn.appendChild(span);
-        packagesContainer.appendChild(btn);
-      });
-    } else {
-      warningDiv.style.display='block';
+fetch('download_software/Lists.json')
+  .then(res => {
+    if(!res.ok) throw new Error("Cannot load Lists.json");
+    return res.json();
+  })
+  .then(packages => {
+    const container = document.getElementById('packages');
+    if(packages.length === 0){
+      container.innerHTML = "<h2>Cannot find source download_software/ — Please try again later.</h2>";
+      return;
     }
-  }).catch(err=>{ warningDiv.style.display='block'; });
-}else{
-  warningDiv.style.display='block';
-}
+    packages.forEach(pkg => {
+      const div = document.createElement("div");
+      div.className = "package";
+      div.innerHTML = `
+        <img src="${pkg.icon}" alt="${pkg.name} icon">
+        <span>${pkg.name}</span>
+        <button onclick="window.location='${pkg.file}'">Download</button>
+      `;
+      container.appendChild(div);
+    });
+  })
+  .catch(err => {
+    document.getElementById('packages').innerHTML = "<h2>Cannot find source download_software/ — Please try again later.</h2>";
+    console.error(err);
+  });
 </script>
 
 </body>
