--- a/downloads.html
+++ b/downloads.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Feedback - HomeSoft</title>
+<title>Downloads - HomeSoft</title>
 <style>
 body {
   font-family: Arial, sans-serif;
   background: #eef;
   margin: 0;
-  padding: 20px;
+  padding: 0;
 }
 header {
   background-color: #007bff;
@@ -32,87 +32,103 @@ nav a:hover {
   text-decoration: underline;
 }
 .container {
-  max-width: 600px;
-  margin: 40px auto;
+  max-width: 700px;
+  margin: 20px auto;
   padding: 20px;
   background: #fff;
   border-radius: 10px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  max-height: 80vh;
+  overflow-y: auto;
 }
-input, textarea {
-  width: 100%;
+.package {
+  display: flex;
+  align-items: center;
   padding: 10px;
-  margin: 8px 0;
-  box-sizing: border-box;
-  border-radius: 5px;
-  border: 1px solid #ccc;
+  background: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.1);
 }
-button {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
+.package img {
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+  object-fit: cover;
+}
+.package span {
+  font-size: 16px;
+  font-weight: bold;
+}
+.package button {
+  margin-left: auto;
+  padding: 6px 12px;
+  font-size: 14px;
+  cursor: pointer;
   border: none;
   border-radius: 5px;
-  cursor: pointer;
+  background-color: #007bff;
+  color: white;
 }
-button:hover {
+.package button:hover {
   background-color: #0056b3;
 }
 #status {
-  margin-top: 15px;
-  font-weight: bold;
-  color: green;
   text-align: center;
+  font-weight: bold;
+  color: red;
+  margin-top: 10px;
 }
 </style>
 </head>
 <body>
 
 <header>
-  <h1>HomeSoft Feedback</h1>
+  <h1>HomeSoft Downloads</h1>
   <nav>
     <a href="index.html">Home</a>
-    <a href="downloads.html">Downloads</a>
+    <a href="feedback.html">Feedback</a>
   </nav>
 </header>
 
-<div class="container">
-  <h2>Send us your feedback</h2>
-  <form id="feedbackForm">
-    <input type="email" id="email" placeholder="Your email" required>
-    <textarea id="feedback" placeholder="Your feedback" rows="5" required></textarea>
-    <button type="submit">Submit Feedback</button>
-  </form>
-  <div id="status"></div>
-</div>
+<div class="container" id="packages"></div>
+<div id="status"></div>
 
 <script>
-document.getElementById('feedbackForm').addEventListener('submit', function(e){
-  e.preventDefault();
-  
-  const email = document.getElementById('email').value.trim();
-  const feedbackText = document.getElementById('feedback').value.trim();
-  
-  if(!email || !feedbackText){
-    alert("Please fill in both email and feedback.");
-    return;
-  }
+fetch('download_software/Lists.json')
+  .then(res => {
+    if(!res.ok) throw new Error("Cannot load Lists.json");
+    return res.json();
+  })
+  .then(packages => {
+    const container = document.getElementById('packages');
+    const status = document.getElementById('status');
 
-  const feedbackEntry = {
-    email: email,
-    feedback: feedbackText,
-    timestamp: new Date().toISOString()
-  };
+    if(!packages || packages.length === 0){
+      status.innerText = "Cannot find source download_software/ — Please try again later.";
+      return;
+    }
 
-  // GitHub Pages is static, cannot write JSON automatically
-  console.log("New feedback entry (copy to feedbacks.json manually):", feedbackEntry);
+    packages.forEach(pkg => {
+      const div = document.createElement("div");
+      div.className = "package";
 
-  document.getElementById('status').innerText = 
-    "Thank you for your feedback! To save it permanently, add this entry to feedbacks.json.";
-
-  // Clear form
-  document.getElementById('feedbackForm').reset();
-});
+      // Use placeholder if icon fails to load
+      const imgSrc = pkg.icon || '';
+      div.innerHTML = `
+        <img src="${imgSrc}" alt="${pkg.name} icon" onerror="this.src='https://via.placeholder.com/50?text=?'">
+        <span>${pkg.name}</span>
+        <button onclick="window.location='${pkg.file}'">Download</button>
+      `;
+      container.appendChild(div);
+    });
+  })
+  .catch(err => {
+    console.error(err);
+    document.getElementById('status').innerText = "Cannot find source download_software/ — Please try again later.";
+  });
 </script>
 
 </body>
